Update on August-6-2024

--- a/dotfiles/desktop-files/screenshotmonitor.desktop
+++ b/dotfiles/desktop-files/screenshotmonitor.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Type=Application
 Name=Screenshot Monitor
-Exec=/home/hannah/.local/bin/screenshotmonitor
-Icon=/home/hannah/.local/share/icons/distrobox
+Exec=nohup /home/hannah/.local/bin/screenshotmonitor >/dev/null 2>&1 &
+Icon=/home/hannah/.local/share/icons/screenshotmonitor.png
 Categories=Utility;
 NoDisplay=false
-Terminal=true
+Terminal=false
