--- a/dotfiles/alacritty.toml
+++ b/dotfiles/alacritty.toml
@@ -5,6 +5,7 @@
 dimensions = { columns = 80, lines = 24 }
 padding = { x = 2, y = 2 }
 decorations = "Full"
+opacity = 0.85
 
 # Font configuration
 [font]
@@ -21,29 +22,29 @@ args = ["-ic", "nsh; exec zsh"]
 # Colors (Gruvbox dark)
 [colors.primary]
 background = "#282828"
-foreground = "#ebdbb2"
+foreground = "#fdfaf2"
 
 # Normal colors
-[colors.normal]
-black = "#282828"
-red = "#cc241d"
-green = "#98971a"
-yellow = "#d79921"
-blue = "#458588"
-magenta = "#b16286"
-cyan = "#689d6a"
-white = "#a89984"
+# [colors.normal]
+# black = "#282828"
+# red = "#cc241d"
+# green = "#98971a"
+# yellow = "#d79921"
+# blue = "#458588"
+# magenta = "#b16286"
+# cyan = "#689d6a"
+# white = "#a89984"
 
-# Bright colors
-[colors.bright]
-black = "#928374"
-red = "#fb4934"
-green = "#b8bb26"
-yellow = "#fabd2f"
-blue = "#83a598"
-magenta = "#d3869b"
-cyan = "#8ec07c"
-white = "#ebdbb2"
+# # Bright colors
+# [colors.bright]
+# black = "#928374"
+# red = "#fb4934"
+# green = "#b8bb26"
+# yellow = "#fabd2f"
+# blue = "#83a598"
+# magenta = "#d3869b"
+# cyan = "#8ec07c"
+# white = "#ebdbb2"
 
 # Cursor settings
 [cursor]
